layout issue fix

--- a/src/style.css
+++ b/src/style.css
@@ -360,6 +360,11 @@ footer {
   .heroWrapper {
     margin: 95px auto 0 auto;
   }
+
+  .aboutMeText {
+    width: 85%;
+    margin-left: 60px;
+  }
 }
 
 /*DESKTOP*/
@@ -384,11 +389,6 @@ footer {
 
   h1 {
     font-size: 3.3rem;
-  }
-
-  h3,
-  .intro-text {
-    font-size: 2.25rem;
   }
 
   h4 {
@@ -434,7 +434,13 @@ footer {
 
   /* ABOUT ME */
   .aboutMeText {
-    width: 85%;
+    margin-left: 80px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  /* ABOUT ME */
+  .aboutMeText {
     margin-left: 90px;
   }
 }
